[package]
name = "crunchy"
version = "0.1.6"
authors = ["Vurich <jackefransham@hotmail.co.uk>"]
description = "Crunchy unroller: deterministically unroll constant loops"
license = "MIT"
build = "build.rs"

[dependencies]

[features]
"limit_64" = []
"limit_128" = []
"limit_256" = []
"limit_512" = []
"limit_1024" = []
"limit_2048" = []
"default" = ["limit_128"]
